[metadata]
name = tap_pagerduty
author = David Wallace
author_email = david.wallace@goodeggs.com
maintainer = David Wallace
maintainer_email = david.wallace@goodeggs.com
version = attr: tap_pagerduty.__version__
url = https://github.com/goodeggs/tap-pagerduty
description = Singer.io tap for extracting data from Pagerduty v2 API
long_description = file: README.md
keywords = singer, python, pagerduty
license = GPLv3
license_file = file: LICENSE
classifiers =
  Development Status :: 1 - Planning
  License :: OSI Approved :: GNU General Public License v3 (GPLv3)
  Natural Language :: English
  Topic :: Software Development
  Intended Audience :: Developers
  Operating System :: OS Independent
  Programming Language :: Python :: 3 :: Only
  Programming Language :: Python :: 3.6
  Programming Language :: Python :: 3.7

[options]
packages = find:
python_requires = >=3.6
install_requires =
  requests == 2.22.0
  singer-python == 5.7.0
tests_require =
  flake8 >= 3.7.8

[options.entry_points]
console-scripts =
  tap-pagerduty = tap_pagerduty:main

[options.package_data]
tap_pagerduty =
  schemas/*.json
